# pixc2profile

./: README.md  config.json  environment.yml  pipeline.py  pipline.py  pyproject.toml  setup.py  step_by_step_Guide.ipynb
examples/: guide.ipynb  pipeline_example.py  step_by_step_Guide.ipynb
examples/data/shps/: adj_reach_full.dbf  adj_reach_full.qmd  test_river.qmd  test_river_poly.shp  test_river_poly.shx
pixc2profile/: __init__.py  download.py  helper.py  interpolator.py  pipeline.py  pixc.py  profile.py  profile_old.py  river.py
tests/: test_download.py  test_pixc.py  test_profile.py  test_river.py
tests/data/shps/: adj_reach_full.shp  test_river.dbf  test_river.shx  test_river_poly.dbf
