[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixc2profile"
version = "0.3.0"
authors = [
    {name = "Xinchen He", email = "xinchen134543@gmail.com"},
]
description = "A Python package for extracting along-river water surface elevation (WSE) profiles directly from SWOT Pixel Cloud (PixC) data"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "earthaccess",
    "xarray",
    "scikit-learn",
    "geopandas",
    "tqdm",
    "matplotlib",
    "seaborn",
    "dask-geopandas",
    "statsmodels",
    "shapely",
    "contextily",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pixc2profile*"]